# ehteval

./: .gitignore  LICENSE.txt  README.md  array.txt  data_config.yaml  evaluate.py  generate_data.py  generate_models.py  models_config.yaml  params.yml  pyproject.toml  tutorials.ipynb
.github/workflows/: ci.yml  deploy-docs.yml
arrays/: EHT2017.txt
caltable_april11/: SGRA_AA.txt  SGRA_AP.txt  SGRA_AZ.txt  SGRA_JC.txt  SGRA_LM.txt  SGRA_SM.txt  SGRA_SP.txt  SGRA_SR.txt  array.txt
docs/: conf.py  docusaurus.config.js  index.rst  package-lock.json  syndata.rst
src/: models.py  patternspeed.py  preimcal.py  syntheticdata.py  vida_pol.jl  vida_pol.py  visualize.py
src/ehteval/: __about__.py  __init__.py
tests/: test_sample.py
