[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ehteval"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
homepage = "https://github.com/rohandahale/ehteval.git"
repository = "https://github.com/rohandahale/ehteval.git"
keywords = []
authors = [
  { name = "rohandahale", email = "rdahale@iaa.es" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pytest", "pytest-cov", "ehtim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.urls]
Documentation = "https://github.com/rohandahale/ehteval#readme"
Issues = "https://github.com/rohandahale/ehteval/issues"
Source = "https://github.com/rohandahale/ehteval"

[tool.hatch.version]
path = "src/ehteval/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ehteval tests}"

[tool.coverage.run]
source_pkgs = ["ehteval", "tests"]
branch = true
parallel = true
omit = [
  "src/ehteval/__about__.py",
]

[tool.coverage.paths]
ehteval = ["src/ehteval", "*/ehteval/src/ehteval"]
tests = ["tests", "*/ehteval/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
